--- a/testgit101.html
+++ b/testgit101.html
@@ -12,6 +12,8 @@
     <h1>Heading</h1>
     <h2>Subheading</h2>
     <p>This is a branch 1</p>
+    <p>This is a branch 1</p>
+    <p>This is a branch 1</p>
 </body>
 
 </html>
