--- a/testgit101.html
+++ b/testgit101.html
@@ -14,6 +14,8 @@
     <p>This is a branch 1</p>
     <p>This is a branch 1</p>
     <p>This is a branch 1</p>
+    <p>This is a branch 1</p>
+    <p>This is a branch 1</p>
 </body>
 
 </html>
